--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a website for the fictional campsites review site Nucamp",
   "main": "index.html",
   "scripts": {
+    "scss": "node-sass -o css/ css/",
     "lite": "lite-server",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +12,8 @@
   "author": "Tristen",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.12.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
@@ -21,3 +23,4 @@
     "popper.js": "^1.12.9"
   }
 }
+
